syntax = "proto3";

package pb;
option go_package = "./pb";

message UserLoginRequest {
  string username = 1;
  string password = 2;
}

message UserLoginResponse {
  int64 ID = 1;
  string UserName = 2;
}
message UserRegisterRequest {
  string username = 1;
  string password = 2;
}
message UserRegisterResponse {
  int64 ID = 1;
  string UserName = 2;
}
message GetUserInfoResponse{
  int64 ID = 1;
  string UserName = 2;
}
message GetUserInfoRequest {
  int64 ID = 1;
}
message GetUserByNameRequest{
  string username = 1;
}

service User {
  rpc Login(UserLoginRequest) returns(UserLoginResponse);
  rpc Register(UserRegisterRequest) returns (UserRegisterResponse);
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
  rpc GetUserByName(GetUserByNameRequest) returns (GetUserInfoResponse);
}
